_generated-doc/2.7/config/quarkus-cache-config-group-cache-config-caffeine-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-cache-config-group-cache-config-caffeine-config_configuration]]link:#quarkus-cache-config-group-cache-config-caffeine-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.initial-capacity]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.initial-capacity[quarkus.cache.caffeine."cache-name".initial-capacity]`

[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.maximum-size]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.maximum-size[quarkus.cache.caffeine."cache-name".maximum-size]`

[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.
--|long 
|


a|icon:lock[title=Fixed at build time] [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.expire-after-write]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.expire-after-write[quarkus.cache.caffeine."cache-name".expire-after-write]`

[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.expire-after-access]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.expire-after-access[quarkus.cache.caffeine."cache-name".expire-after-access]`

[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.metrics-enabled]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus.cache.caffeine.-cache-name-.metrics-enabled[quarkus.cache.caffeine."cache-name".metrics-enabled]`

[.description]
--

--|boolean 
|`false`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
