_generated-doc/3.2/config/quarkus-cache-config-group-cache-config-caffeine-config.adoc

:summaryTableId: quarkus-cache-config-group-cache-config-caffeine-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-default-config-default-configuration-applied-to-all-caffeine-caches-lowest-precedence]]link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-default-config-default-configuration-applied-to-all-caffeine-caches-lowest-precedence[Default configuration applied to all Caffeine caches (lowest precedence)]

h|Type
h|Default

a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-initial-capacity]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-initial-capacity[quarkus.cache.caffeine.initial-capacity]`


[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_INITIAL_CAPACITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_INITIAL_CAPACITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-maximum-size]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-maximum-size[quarkus.cache.caffeine.maximum-size]`


[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_MAXIMUM_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_MAXIMUM_SIZE+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-expire-after-write]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-expire-after-write[quarkus.cache.caffeine.expire-after-write]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_WRITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_WRITE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-expire-after-access]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-expire-after-access[quarkus.cache.caffeine.expire-after-access]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_ACCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_EXPIRE_AFTER_ACCESS+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-metrics-enabled]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-metrics-enabled[quarkus.cache.caffeine.metrics-enabled]`


[.description]
--
Whether or not metrics are recorded if the application depends on the Micrometer extension. Setting this value to `true` will enable the accumulation of cache stats inside Caffeine.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


h|[[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-caches-config-additional-configuration-applied-to-a-specific-caffeine-cache-highest-precedence]]link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-caches-config-additional-configuration-applied-to-a-specific-caffeine-cache-highest-precedence[Additional configuration applied to a specific Caffeine cache (highest precedence)]

h|Type
h|Default

a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-initial-capacity]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-initial-capacity[quarkus.cache.caffeine."cache-name".initial-capacity]`


[.description]
--
Minimum total size for the internal data structures. Providing a large enough estimate at construction time avoids the need for expensive resizing operations later, but setting this value unnecessarily high wastes memory.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__INITIAL_CAPACITY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__INITIAL_CAPACITY+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-maximum-size]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-maximum-size[quarkus.cache.caffeine."cache-name".maximum-size]`


[.description]
--
Maximum number of entries the cache may contain. Note that the cache *may evict an entry before this limit is exceeded or temporarily exceed the threshold while evicting*. As the cache size grows close to the maximum, the cache evicts entries that are less likely to be used again. For example, the cache may evict an entry because it hasn't been used recently or very often.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__MAXIMUM_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__MAXIMUM_SIZE+++`
endif::add-copy-button-to-env-var[]
--|long 
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-expire-after-write]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-expire-after-write[quarkus.cache.caffeine."cache-name".expire-after-write]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, or the most recent replacement of its value.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_WRITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_WRITE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-expire-after-access]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-expire-after-access[quarkus.cache.caffeine."cache-name".expire-after-access]`


[.description]
--
Specifies that each entry should be automatically removed from the cache once a fixed duration has elapsed after the entry's creation, the most recent replacement of its value, or its last read.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_ACCESS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__EXPIRE_AFTER_ACCESS+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|


a| [[quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-metrics-enabled]]`link:#quarkus-cache-config-group-cache-config-caffeine-config_quarkus-cache-caffeine-cache-name-metrics-enabled[quarkus.cache.caffeine."cache-name".metrics-enabled]`


[.description]
--
Whether or not metrics are recorded if the application depends on the Micrometer extension. Setting this value to `true` will enable the accumulation of cache stats inside Caffeine.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CACHE_CAFFEINE__CACHE_NAME__METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
